--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 Assets/ArchVizPRO_Interior
 Assets/AssetStoreTools*
 Assets/ZFBrowser
-
+Assets/IBMSdkCore/
 # Visual Studio cache directory
 .vs/
 
